/aboutme - fix layout contact vertical align

--- a/src/app/aboutme/drawer-side/drawer-side.component.css
+++ b/src/app/aboutme/drawer-side/drawer-side.component.css
@@ -44,6 +44,8 @@ ul li span {
 a {
   display: inline-flex;
   vertical-align: middle;
+  justify-content: center;
+  align-items: center;
 }
 
 .icon {
